Заменены картинки, исправлены пути фона

--- a/sass/component/_page-contact.scss
+++ b/sass/component/_page-contact.scss
@@ -37,7 +37,7 @@
     // *****************************
 
     // background-color: $color-background-contact;
-    background-image: url(../../images/Bg.png);
+    background-image: url(../images/Bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     // @media screen and (max-width: 767px) {
