--- a/sass/component/_page-price.scss
+++ b/sass/component/_page-price.scss
@@ -6,7 +6,7 @@
     padding-bottom: 130px;
   }
 
-  background-image: url(../../images/price.png),
+  background-image: url(../images/price.png),
     linear-gradient($color-background-price, $color-background-price);
   background-size: cover;
   &__subtitle {
@@ -48,6 +48,7 @@
     @media screen and (min-width: 1280px) {
       display: flex;
       justify-content: space-between;
+      padding: 0;
     }
     margin-bottom: 50px;
     color: $color-text-slider;
