--- a/sass/component/_page-slider.scss
+++ b/sass/component/_page-slider.scss
@@ -108,7 +108,7 @@
     }
     background-color: $color-background-sidebar;
     background-image: linear-gradient($color-gradient-02, $color-gradient-02),
-      url(../../images/Slider.jpg);
+      url(../images/Slider.jpg);
     background-size: cover;
   }
 }
