--- a/css/main.css
+++ b/css/main.css
@@ -966,8 +966,8 @@ button {
 
 .slider__blok {
   background-color: rgba(25, 28, 38, 0.2);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(../../images/Slider.jpg);
-  background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../../images/Slider.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(../images/Slider.jpg);
+  background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/Slider.jpg);
   background-size: cover;
 }
 
@@ -1148,8 +1148,8 @@ button {
 .tariff {
   padding-top: 84px;
   padding-bottom: 84px;
-  background-image: url(../../images/price.png), -webkit-gradient(linear, left top, left bottom, from(#111319), to(#111319));
-  background-image: url(../../images/price.png), linear-gradient(#111319, #111319);
+  background-image: url(../images/price.png), -webkit-gradient(linear, left top, left bottom, from(#111319), to(#111319));
+  background-image: url(../images/price.png), linear-gradient(#111319, #111319);
   background-size: cover;
 }
 
@@ -1222,6 +1222,7 @@ button {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    padding: 0;
   }
 }
 
@@ -1693,7 +1694,7 @@ button {
 }
 
 .contact__blok-right {
-  background-image: url(../../images/Bg.png);
+  background-image: url(../images/Bg.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
