--- a/css/main.css
+++ b/css/main.css
@@ -740,7 +740,7 @@ body.modal-open {
 
 .sidebar > div.is-activ {
   width: 17px;
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .sidebar > div + div {
@@ -770,22 +770,23 @@ body.modal-open {
   width: 100%;
 }
 
-button {
+.slider-btn {
   border: none;
   color: rgba(157, 164, 189, 0.6);
   cursor: pointer;
   font-size: 16px;
   padding: 15px;
+  -webkit-transition-property: color border-bottom;
+  transition-property: color border-bottom;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container .controls button:hover {
-  border-bottom: 1px solid #fff;
-  color: #fff;
-}
-
-.container .controls button:focus {
-  border-bottom: 1px solid #fff;
-  color: #fff;
+  border-bottom: 1px solid #ffffff;
+  color: #ffffff;
 }
 
 .container .controls button {
@@ -824,6 +825,132 @@ button {
 @media screen and (min-width: 1280px) {
   .slider__blok-title {
     width: 400px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .slide-01 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-1@1x-480.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-1@1x-480.jpg");
+  }
+}
+
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
+  .slide-01 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-1@2x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-1@2x-1280.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .slide-01 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-1@1x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-1@1x-1280.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .slide-01 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-1@2x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-1@2x-1280.jpg");
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .slide-01 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-1@1x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-1@1x-1280.jpg");
+  }
+}
+
+@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
+  .slide-01 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-1@2x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-1@2x-1280.jpg");
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .slide-02 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-2@1x-480.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-2@1x-480.jpg");
+  }
+}
+
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
+  .slide-02 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-2@2x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-2@2x-1280.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .slide-02 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-2@1x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-2@1x-1280.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .slide-02 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-2@2x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-2@2x-1280.jpg");
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .slide-02 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-2@1x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-2@1x-1280.jpg");
+  }
+}
+
+@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
+  .slide-02 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-2@2x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-2@2x-1280.jpg");
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .slide-03 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-3@1x-480.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-3@1x-480.jpg");
+  }
+}
+
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
+  .slide-03 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-3@2x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-3@2x-1280.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .slide-03 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-3@1x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-3@1x-1280.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .slide-03 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-3@2x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-3@2x-1280.jpg");
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .slide-03 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-3@1x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-3@1x-1280.jpg");
+  }
+}
+
+@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
+  .slide-03 {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-3@2x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-3@2x-1280.jpg");
   }
 }
 
@@ -966,8 +1093,6 @@ button {
 
 .slider__blok {
   background-color: rgba(25, 28, 38, 0.2);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(../images/Slider.jpg);
-  background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/Slider.jpg);
   background-size: cover;
 }
 
@@ -990,6 +1115,20 @@ button {
     padding: 273px 520px 206px 95px;
     width: 1073px;
     height: 680px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .slider__blok {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-1@1x-480.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-1@1x-480.jpg");
+  }
+}
+
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
+  .slider__blok {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(25, 28, 38, 0.2)), to(rgba(25, 28, 38, 0.2))), url(".././images/slider-1@2x-1280.jpg");
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(".././images/slider-1@2x-1280.jpg");
   }
 }
 
@@ -1148,8 +1287,6 @@ button {
 .tariff {
   padding-top: 84px;
   padding-bottom: 84px;
-  background-image: url(../images/price.png), -webkit-gradient(linear, left top, left bottom, from(#111319), to(#111319));
-  background-image: url(../images/price.png), linear-gradient(#111319, #111319);
   background-size: cover;
 }
 
@@ -1157,6 +1294,48 @@ button {
   .tariff {
     padding-top: 130px;
     padding-bottom: 130px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .tariff {
+    background-image: url(../images/bg-2@1x-480.png), -webkit-gradient(linear, left top, left bottom, from(#111319), to(#111319));
+    background-image: url(../images/bg-2@1x-480.png), linear-gradient(#111319, #111319);
+  }
+}
+
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
+  .tariff {
+    background-image: url(../images/bg-2@2x-480.png), -webkit-gradient(linear, left top, left bottom, from(#111319), to(#111319));
+    background-image: url(../images/bg-2@2x-480.png), linear-gradient(#111319, #111319);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .tariff {
+    background-image: url(../images/bg-2@1x-768.png), -webkit-gradient(linear, left top, left bottom, from(#111319), to(#111319));
+    background-image: url(../images/bg-2@1x-768.png), linear-gradient(#111319, #111319);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .tariff {
+    background-image: url(../images/bg-2@2x-768.png), -webkit-gradient(linear, left top, left bottom, from(#111319), to(#111319));
+    background-image: url(../images/bg-2@2x-768.png), linear-gradient(#111319, #111319);
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .tariff {
+    background-image: url(../images/bg-2@1x-1280.png), -webkit-gradient(linear, left top, left bottom, from(#111319), to(#111319));
+    background-image: url(../images/bg-2@1x-1280.png), linear-gradient(#111319, #111319);
+  }
+}
+
+@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
+  .tariff {
+    background-image: url(../images/bg-2@2x-1280.png), -webkit-gradient(linear, left top, left bottom, from(#111319), to(#111319));
+    background-image: url(../images/bg-2@2x-1280.png), linear-gradient(#111319, #111319);
   }
 }
 
@@ -1232,8 +1411,8 @@ button {
     background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
   }
   .tariff__list-right {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#090b13), to(rgba(9, 11, 19, 0.2)));
-    background-image: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#171a24), to(rgba(23, 26, 36, 0.2)));
+    background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
   }
 }
 
@@ -1694,7 +1873,6 @@ button {
 }
 
 .contact__blok-right {
-  background-image: url(../images/Bg.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -1719,6 +1897,42 @@ button {
     width: 625px;
     padding: 131px 55px 131px 100px;
     display: block;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contact__blok-right {
+    background-image: url("../images/bg-3@1x-480.png");
+  }
+}
+
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
+  .contact__blok-right {
+    background-image: url("../images/bg-3@2x-480.png");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contact__blok-right {
+    background-image: url("../images/bg-3@1x-768.png");
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .contact__blok-right {
+    background-image: url("../images/bg-3@2x-768.png");
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .contact__blok-right {
+    background-image: url("../images/bg-3@1x-1280.png");
+  }
+}
+
+@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
+  .contact__blok-right {
+    background-image: url("../images/bg-3@2x-1280.png");
   }
 }
 
@@ -1872,6 +2086,14 @@ address {
   letter-spacing: 0.1em;
   text-transform: uppercase;
   color: rgba(157, 164, 189, 0.4);
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form__input:focus-within + .form__label {
@@ -1886,10 +2108,15 @@ address {
   color: #ffffff;
 }
 
+.form__input:not(:placeholder-shown) + .form__label,
+.form__input:focus + .form__label {
+  -webkit-transform: translateY(-150%);
+          transform: translateY(-150%);
+}
+
 .form__name {
   width: 100%;
   margin-right: 30px;
-  padding-left: 46px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1906,7 +2133,6 @@ address {
 
 .form__tel {
   width: 100%;
-  padding-left: 77px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1925,7 +2151,6 @@ address {
   height: 76px;
   width: 100%;
   resize: none;
-  padding-top: 27px;
 }
 
 @media screen and (min-width: 768px) {
