--- a/sass/component/_page-slider.scss
+++ b/sass/component/_page-slider.scss
@@ -3,7 +3,6 @@
     padding-left: 0;
     padding-right: 0;
   }
-  // *************1111
   @media screen and (min-width: 768px) {
     display: flex;
     justify-content: flex-end;
@@ -14,15 +13,6 @@
     justify-content: flex-end;
     position: relative;
   }
-  // &__blok-social {
-  //   display: flex;
-  // height: 93px;
-  // padding-top: 370px;
-  // width: 97px;
-  // justify-content: center;
-  // padding-right: 32px;
-  // margin-top: 120px;
-  // }
   &__subtitle {
     color: $color-text-06;
     @media screen and (max-width: 767px) {
@@ -107,8 +97,17 @@
       height: 680px;
     }
     background-color: $color-background-sidebar;
-    background-image: linear-gradient($color-gradient-02, $color-gradient-02),
-      url(../images/Slider.jpg);
+    @media screen and (max-width: 767px) {
+      background-image: linear-gradient($color-background-sidebar, $color-background-sidebar),
+        url('.././images/slider-1@1x-480.jpg');
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient($color-background-sidebar, $color-background-sidebar),
+          url('.././images/slider-1@2x-1280.jpg');
+      }
+    }
+
     background-size: cover;
   }
 }
