--- a/sass/component/_page-contact.scss
+++ b/sass/component/_page-contact.scss
@@ -20,8 +20,6 @@
   }
   &__blok-right {
     @media screen and (max-width: 767px) {
-      // padding-left: 31px;
-      // padding-right: 31px;
       padding: 84px 31px;
     }
     @media screen and (min-width: 768px) {
@@ -34,17 +32,38 @@
       display: block;
     }
 
-    // *****************************
+    // ***********************************
+    @media screen and (max-width: 767px) {
+      background-image: url('../images/bg-3@1x-480.png');
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url('../images/bg-3@2x-480.png');
+      }
+    }
 
-    // background-color: $color-background-contact;
-    background-image: url(../images/Bg.png);
+    @media screen and (min-width: 768px) {
+      background-image: url('../images/bg-3@1x-768.png');
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url('../images/bg-3@2x-768.png');
+      }
+    }
+
+    @media screen and (min-width: 1280px) {
+      background-image: url('../images/bg-3@1x-1280.png');
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url('../images/bg-3@2x-1280.png');
+      }
+    }
+
+    // ***********************************
+
     background-repeat: no-repeat;
     background-size: cover;
-    // @media screen and (max-width: 767px) {
-    //   background-position: bottom;
-    // }
-    // background-position: right;
-    // ***************************
   }
   &__blok-top {
     @media screen and (min-width: 768px) {
@@ -108,7 +127,7 @@
     content: '';
     width: 60px;
     height: 1px;
-    background-color: rgba(157, 164, 189, 0.4);
+    background-color: $color-border;
   }
   &__time {
     color: $color-text-slider;
@@ -137,6 +156,7 @@ address {
   &__group {
     position: relative;
   }
+
   &__input {
     background-color: transparent;
     border: none;
@@ -145,6 +165,7 @@ address {
     color: $color-background;
     cursor: pointer;
   }
+
   &__label {
     position: absolute;
     top: 8px;
@@ -155,6 +176,7 @@ address {
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: $color-border;
+    @include animation(transform);
   }
   &__input:focus-within + &__label {
     color: $color-background;
@@ -166,6 +188,10 @@ address {
   &__input:hover + &__label {
     color: $color-background;
   }
+  &__input:not(:placeholder-shown) + &__label,
+  &__input:focus + &__label {
+    transform: translateY(-150%);
+  }
   &__name {
     width: 100%;
     @media screen and (min-width: 768px) {
@@ -174,9 +200,7 @@ address {
     @media screen and (min-width: 1280px) {
       width: 270px;
     }
-
     margin-right: 30px;
-    padding-left: 46px;
   }
   &__tel {
     width: 100%;
@@ -186,8 +210,6 @@ address {
     @media screen and (min-width: 1280px) {
       width: 260px;
     }
-
-    padding-left: 77px;
   }
   &__message {
     height: 76px;
@@ -199,7 +221,6 @@ address {
       width: 560px;
     }
     resize: none;
-    padding-top: 27px;
   }
   &__btn {
     @media screen and (max-width: 767px) {
