--- a/sass/component/_page-price.scss
+++ b/sass/component/_page-price.scss
@@ -6,8 +6,41 @@
     padding-bottom: 130px;
   }
 
-  background-image: url(../images/price.png),
-    linear-gradient($color-background-price, $color-background-price);
+  //********************************
+  @media screen and (max-width: 767px) {
+    background-image: url(../images/bg-2@1x-480.png),
+      linear-gradient($color-background-price, $color-background-price);
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../images/bg-2@2x-480.png),
+        linear-gradient($color-background-price, $color-background-price);
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    background-image: url(../images/bg-2@1x-768.png),
+      linear-gradient($color-background-price, $color-background-price);
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../images/bg-2@2x-768.png),
+        linear-gradient($color-background-price, $color-background-price);
+    }
+  }
+
+  @media screen and (min-width: 1280px) {
+    background-image: url(../images/bg-2@1x-1280.png),
+      linear-gradient($color-background-price, $color-background-price);
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../images/bg-2@2x-1280.png),
+        linear-gradient($color-background-price, $color-background-price);
+    }
+  }
+  //********************************
+
   background-size: cover;
   &__subtitle {
     margin-bottom: 20px;
@@ -34,13 +67,19 @@
   }
   &__list {
     @media screen and (max-width: 767px) {
-      background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+      background-image: linear-gradient(
+        180deg,
+        $color-background-price-list 0%,
+        $color-background-price-list-02 100%
+      );
       padding: 30px;
-      // font-size: 14px;
-      // line-height: 2.14;
     }
     @media screen and (min-width: 768px) {
-      background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+      background-image: linear-gradient(
+        180deg,
+        $color-background-price-list 0%,
+        $color-background-price-list-02 100%
+      );
       padding: 30px 40px;
       font-size: 18px;
       line-height: 1.67;
@@ -55,16 +94,21 @@
   }
   @media screen and (min-width: 1280px) {
     &__list-left {
-      background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+      background-image: linear-gradient(
+        180deg,
+        $color-background-price-list 0%,
+        $color-background-price-list-02 100%
+      );
     }
     &__list-right {
-      background-image: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
+      background-image: linear-gradient(
+        180deg,
+        $color-background-price-list 0%,
+        $color-background-price-list-02 100%
+      );
     }
   }
-  // &__list-right,
-  // &__list-left {
-  //   //
-  // }
+
   &__item {
     display: flex;
     justify-content: space-between;
@@ -79,7 +123,7 @@
     width: 100%;
     height: 1px;
     display: block;
-    background-color: rgba(157, 164, 189, 0.12);
+    background-color: $color-text-12;
     margin: 0 6px;
   }
   &__desc,
